--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,17 +1,97 @@
 
 .contact {
     width: 100%;
-    height: 100vh;
+    padding: 30px 0;
 }
 
+.contact-links {
+    padding: 30px;
+}
+
+.contact-links ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+}
+
+.contact-me{
+    padding: 1px 10px 5px;
+    margin: 5px 0;
+    background: #fc3a47;
+    border-radius: 10px;
+    color: white;
+    font-size: 1.4rem;
+    text-align: center;
+    width: 122px;
+}
+
+.fa-2x {
+    padding: 4px;
+    color: #fc3a47;
+}
+
+
 .contact-info{
-    margin: 20px;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    padding: 30px;
+}
+
+.form-control{
+    margin: 5px 0;
+    padding: 9px;
+    border-radius: 5px;
+    border: none;
+    background: #efefef;
+}
+
+button {
+    border: 1px solid #fc3a47;
+    padding: 10px;
+    background: none;
+    color: #fc3a47;
+    width: 75px;
+    border-radius: 6px;
+    align-self: flex-end;
 }
 
 .textarea {
     width: 100%;
 }
+
+
+  /* =========================Tablets and Ipads========================== */
+  
+  @media only screen and (max-width: 1024px) {
+   
+  }
+  
+  /* =====================Low res tablets and Mobiles========================= */
+  
+  
+  @media only screen and (max-width: 768px) {
+    
+    .contact-info{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contact-links{
+        padding-bottom: 0;
+    }
+  }
+  
+  
+  @media only screen and (max-width: 480px) {
+    form {
+        width: 80vw;
+    }
+  }
