--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,12 +1,12 @@
 .map-wrapper{
     width: 100%;
-    height: 40vh;
+    height: 60vh;
 }
-
-/* .map-wrapper div.map {
+/* 
+.map-wrapper div.map {
     position: absolute;
     width: 100%;
-    height: 40vh;
+    height: 50vh;
 } */
 
 
