--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
-.header {
+.header-container{
     height: 80vh;
+    width: 100%;
     display: flex;
     color: white;
     flex-direction: column;
@@ -12,10 +13,32 @@
     background-position: center;
 }
 
+.header {
+    width: 50vw;
+    margin: 0 auto;
+}
+.header h1{
+    font-size: 3rem;
+    padding: 10px 0;
+}
+
+.header h4{
+    font-size: 1.2rem;
+    font-weight: 400;
+    padding: 10px 0;
+}
+
+
 .header-content,
 .hire {
     margin: 15px auto;
-    width: 60vw;
+    max-width: 680px;
+}
+
+.here {
+    text-decoration: underline;
+    font-size: 600;
+    cursor: pointer;
 }
 
 .hire-btn {
@@ -24,4 +47,54 @@
     border-radius: 4px;
     cursor: pointer;
 }
+
+  /* =========================Tablets and Ipads========================== */
+  
+  @media only screen and (max-width: 1024px) {
+    .header-content, .hire {
+        margin: 15px auto;
+        width: 60vw;
+    }
+
+    .header{
+        width: 80vw;
+    }
+  }
+  
+  /* =====================Low res tablets and Mobiles========================= */
+  
+  
+  @media only screen and (max-width: 768px) {
+    .header{
+        width: 80vw;
+    }
+    .header h1{
+        font-size: 2.4rem;
+    }
+
+    .header-content, .hire {
+        margin: 15px auto;
+        width: 85vw;
+    }
+  }
+  
+  
+  @media only screen and (max-width: 480px) {
+    .header{
+        width: 100vw;
+    }
+
+    .header h1{
+        font-size: 1.8rem;
+    }
+
+    .header h4{
+        font-size: 0.9rem;
+    }
+
+    .header-content, .hire {
+        margin: 15px auto;
+        width: 90vw;
+    }
+  }
 
